  * drawLine
2012-04-13      v1.04	Oliver Kraus <olikraus@gmail.com>
  * Adjust U8grelease: Same version number with AVR and Arduino variant
2012-06-10	v1.05	Oliver Kraus <olikraus@gmail.com>
  * m2icon font
  * experimental lc7981_240x64 device
  * experimental ssd1306
  * experimental ssd1322
  * Hardware state backup/restore procedure
2012-06-15	v1.06	Oliver Kraus <olikraus@gmail.com>
  * SBN1661 (SED1520?) support
  * SSD1306 support
  * U8G_PROGMEM bugfix
2012-07-04	v1.07	Oliver Kraus <olikraus@gmail.com>
  * Added Makefiles for AVR release (issue 77)
  * Fixed examples for Arduino Environment (issue 78)
2012-10-02	v1.08	Oliver Kraus <olikraus@gmail.com>
  * Improved delay calculation for strobe pulse (issue 20)
  * Support Chipkit (issue 39)
  * Improved speed for ST7920 parallel mode (issue 79)
  * Overall speed optimization (new page intersection algorithm)
  * Support for Displays Newhaven NHD-C12864, CrystalFontz GFAG20232, Seeedstudio 96x96 OLED
  * Added SPI support for ST7920 with plain AVR (issue 85)
  * Add more LC7981 devices
2012-12-23	v1.09	  Oliver Kraus <olikraus@gmail.com>
  * Support for Displaytech 64128n
  * Support for MINI12864
  * HW SPI for ST7920
  * Add delay after sending a byte with (ST7920 com)
  * Support ATTiny
  * Support I2C for SSD1306
  * bdf2u8g, Windows executable released
  * LC7981 320x64
  * Scalue up: u8g::setScale2x2
  * Added more bitmap fonts
  * u8g::drawRBox(), u8g::drawRFrame()
  * Support for CFAG20232 (st7920_202x32)
  * Fixed ST7920 SW SPI for ChipKit
  * Support for tls8204
2013-02-02	v1.10	  Oliver Kraus <olikraus@gmail.com>
  * Support for SSD1309
  * Support for NHD-C12832A1Z 
  * Bugfix: Fixed reset controll in parallel modes
  * Bugfix: Fixed calculation of cursor position
  * Bugfix: ST7920 parallel mode
2013-03-2	v1.11	  Oliver Kraus <olikraus@gmail.com>
  * Support for T6963
  * Support for Arduino Due
  * Sleep Mode
  * 4x mode for ST7920
  * New C++ interface for ST7920 

  
  
  
  